# wind-old

./: .clang-format  .clang-tidy  .editorconfig  .env.example  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Info.plist  assets.bundle  chaos.sln  ci-requirements.linux.txt  ci-requirements.macos.txt  ci-requirements.windows.txt  ci-requirments.macos.txt  conanfile.py  conanfile.txt  icon.icns  main.cpp  tmp  todo.txt  wm-config.yml
apps/asset-bundler/: CMakeLists.txt
apps/asset-bundler/asset-bundler/: asset_bundler.cpp  asset_bundler.h  bundle.cpp  bundle.h  iloader.h  iserializable.h  utils.h
apps/asset-bundler/asset-bundler/loaders/: iloader.h  image_loader.cpp  image_loader.h  obj_loader.cpp  shader_loader.cpp  shader_loader.h  text_loader.cpp  wavefront_loader.cpp  wavefront_loader.h
apps/asset-bundler/asset-bundler/objects/: image.cpp  image.h  iserializable.h  mesh.cpp  mesh.h  shader.cpp  text.h
apps/breeze/: CMakeLists.txt
apps/breeze/breeze/: breeze.cpp  breeze.h  utils.h
apps/breeze/breeze/components/: renderable.h  transform.h
apps/breeze/breeze/prefab/: component_registry.cpp  prefab.cpp  prefab.h
apps/breeze/breeze/systems/: render.h
apps/chaos/: CMakeLists.txt
apps/chaos/chaos/: game.cpp  game.h  main.cpp  utils.h
apps/chaos/chaos/systems/: camera_controll.cpp  camera_controll.h
apps/cloudy/: CMakeLists.txt
apps/cloudy/cloudy/: container.cpp  container.h  document.cpp  document.h  object.cpp  object.h  value.h  xml.cpp  xml.h
apps/dom/: CMakeLists.txt
apps/dom/dom/: document.h  object.cpp  object.h  utils.h  xml.cpp  xml.h
apps/earth/: CMakeLists.txt
apps/earth/earth/: earth.cpp  earth.h  main.cpp
apps/logger/: CMakeLists.txt
apps/logger/logger/: logger.cpp  logger.h  utils.cpp  utils.h
apps/logger/logger/message/: logger_message_1_of_2.cpp  logger_message_2_of_2.cpp
apps/logger/logger/streams/: logger_stream.h
apps/logger/src/: logger-colors.cpp  logger-colors.h  logger-init-settings.h  logger.cpp  logger.h  logger_message_1_of_2.cpp  logger_message_2_of_2.cpp  utils.h
apps/renderer/: CMakeLists.txt
apps/renderer/renderer/: camera.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  utils.h
apps/resources/: CMakeLists.txt
apps/resources/resources/: resource_manager.cpp  resource_manager.h
apps/resources/resources/getters/: mesh.cpp  mesh.h  prefab.cpp  prefab.h  texture.cpp  texture.h
apps/soul-dungeon/: CMakeLists.txt
apps/soul-dungeon/src/: camera_controll.cpp  camera_controll.h  game.cpp  game.h  level.h  level_one.cpp  level_one.h  main.cpp  mesh.h  render.cpp  render.h  system.h  transform.h  utils.h
apps/soul-dungeon/src/systems/: camera_controll.cpp  camera_controll.h  render.cpp  render.h
apps/std-game/: CMakeLists.txt
apps/std-game/std-game/: component_registry.cpp  component_registry.h  mesh.h  prefab.cpp  prefab.h  renderable.h  system.h  transform.h  utils.h
apps/system/: CMakeLists.txt
apps/system/system/: application.cpp  application.h  window.cpp  window.h
apps/system/system/events/: keyboard.h  mouse.cpp  mouse.h
apps/wind/: CMakeLists.txt
apps/wind/src/: application.cpp  application.h  utils.h
apps/wind/src/entity/: entity.cpp  entity.h
apps/wind/src/event-handlers/: key_event_handler.cpp  key_event_handler.h
apps/wind/src/mesh/: mesh.cpp  mesh.h
apps/wind/src/model/: model.h
apps/wind/src/renderer/: renderer.cpp  renderer.h
apps/wind/src/resources/: resources.h  shader_loader.cpp
apps/wind/src/shader/: shader.cpp  shader.h
apps/wind/src/transform/: transform.h
apps/wind/src/window/: window.cpp  window.h
apps/wind/src/world/: world.cpp  world.h
editor/: CMakeLists.txt
editor/app/src/: event-manager.cpp  events.cpp  js-core-utils.cpp  main.cpp
editor/data/main/: .export-config
editor/data/resources/: .export-config
editor/schemas/: ui.json
editor/src/: main.cpp
examples/logger/: CMakeLists.txt
examples/logger/src/: main.cpp
examples/tic-tac-toe/: CMakeLists.txt
examples/window/: CMakeLists.txt
examples/window/src/: main.cpp
game/: CMakeLists.txt
game/app/src/: main.cpp
game/assets/: .export-config  .import-config  index.html
game/assets/UI/: .eslintrc.js  .eslintrc.json  .export-config  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
game/assets/art/: .export-config  terrain.png.import-config
game/assets/configs/: triggers.yml
game/assets/scripts/: .import-config  Lib.cs
game/assets/ui/: .import-config  index.html  pnpm-lock.yaml
game/data/assets/: .export-config
game/data/main/: .export-config
game/data/resources/: .export-config
game/schemas/: ui.json
game/src/: dotnet.cpp  main.cpp
src/logger/: CMakeLists.txt
src/logger/include/: logger.h  utils.h  wind_logger.h
src/logger/logger/: utils.cpp  wind_logger.cpp  wind_logger.h
src/logger/src/: logger.cpp  wind_logger.cpp
src/system/: CMakeLists.txt
src/system/include/: utils.h
src/system/system/: utils.cpp
src/utils/: CMakeLists.txt
src/utils/src/: ext_filesystem.cpp
src/window/: CMakeLists.txt
src/window/include/: window.h
src/window/src/: application.cpp  window.cpp
tests/game/: CMakeLists.txt  main.cpp
tests/wind/: CMakeLists.txt  main.cpp  test.cpp
tools/asset-pipeline/: CMakeLists.txt
tools/asset-pipeline/asset/: .import-config
tools/asset-pipeline/src/: asset-pipeline.cpp  main.cpp  pipes-register.cpp
wind/asset-pipeline/: CMakeLists.txt
wind/asset-pipeline/asset-bundler/: CMakeLists.txt
wind/asset-pipeline/asset-manager/: CMakeLists.txt
wind/asset-pipeline/pipes/: CMakeLists.txt
wind/asset-pipeline/src/: asset-manager.cpp  asset-pipeline.cpp  main.cpp  pipes-register.cpp  preprocessing.cpp
wind/breeze/: CMakeLists.txt
wind/core/: CMakeLists.txt
wind/core/event-manager/: CMakeLists.txt
wind/core/renderer/: CMakeLists.txt
wind/core/resources/: CMakeLists.txt
wind/core/window/: CMakeLists.txt
wind/tests/: CMakeLists.txt  test.cpp  test2.cpp
(+666 files in other folders)
